@startuml TablaSimbolos

skinparam ClassAttributeIconSize 0
hide circle

class TablaSimbolos {
    - List<Contexto> contextos
    + addContexto ()
    + delContexto ()
    + addIdentificador ()
    + buscarLocal ()
    + buscarGlobal ()
}

class Contexto {
    - Dict<String, ID> tabla
}

abstract class ID <<abstract>> {
    - String nombregithub
    - Enum tipoDato
    - Boolean inicializado
    - Boolean usado
}

class Variable
class Funcion {
    - List<ID> args
}

TablaSimbolos -> Contexto
Contexto --> ID
ID <|-- Variable
ID <|-- Funcion

@enduml
